# prometheus-alert-demo

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_apy.py
alertmanager/: alertmanager.yml
prometheus/: prometheus.yml  rules.yml
src/prometheus_alert_demo/: __init__.py  main.py
