[project]
name = "prometheus-alert-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "prometheus-client>=0.20.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.5",
]
